--- a/main.css
+++ b/main.css
@@ -202,6 +202,7 @@ body {
             width: 24px;
             height: 24px;
             cursor: pointer;
+            padding: 8.21px 5.73px 6.94px 6.24px;
           }
         }
       }
@@ -219,7 +220,7 @@ body {
     .inner__box {
       display: flex;
       flex-direction: column;
-      height: 306px;
+      height: 319px;
       .inner__title--small {
         width: 242.98px;
         height: 15px;
@@ -257,6 +258,7 @@ body {
           cursor: pointer;
           width: 24px;
           height: 24px;
+          padding: 8.21px 5.73px 6.94px 6.24px;
         }
       }
     }
@@ -402,7 +404,7 @@ body {
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
+        padding-top: 23px;
         width: calc(100% - 16px);
         .inner__logo {
           width: 64px;
@@ -715,7 +717,6 @@ body {
           font-weight: 700;
           line-height: 28px;
           width: 171.1875px;
-          height: 48px;
           background-color: var(--background__button);
           color: var(--color__button-1);
         }
@@ -810,8 +811,7 @@ body {
           flex-direction: column;
           gap: 6px;
           width: 260px;
-          justify-content: center;
-          height: 56px;
+          height: 62px;
           .inner__Enter {
             font-size: 21px;
             font-weight: 700;
@@ -869,6 +869,7 @@ body {
         a {
           text-decoration: none;
           color: #68737d;
+          cursor: pointer;
         }
         a:hover {
           text-decoration: underline;
