--- a/main.css
+++ b/main.css
@@ -442,7 +442,7 @@ body {
           }
         }
         .inner__button-2 {
-          margin-top: 53gipx;
+          margin-top: 53px;
           display: flex;
           align-items: center;
           .inner__link {
