--- a/main.css
+++ b/main.css
@@ -99,7 +99,7 @@ body {
   flex-direction: column;
   justify-content: center;
   .section__1 {
-    margin: 64px 0;
+    height: 166px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -135,7 +135,7 @@ body {
     justify-content: center;
     flex-direction: column;
     gap: 64px;
-    padding: 0 0 64px 0;
+    height: 642px;
     .inner__box-1 {
       display: flex;
       flex-direction: column;
@@ -212,7 +212,7 @@ body {
     display: flex;
     align-items: center;
     gap: 100px;
-    padding: 64px 0;
+    height: 575px;
     .inner__picture {
       width: 444px;
       height: 444px;
@@ -371,9 +371,10 @@ body {
   .section__6 {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     gap: 64px;
-    padding: 64px 0;
+    height: 658px;
     .box__title {
       display: flex;
       flex-direction: column;
@@ -729,7 +730,7 @@ body {
           line-height: 28px;
           width: 171.1875px;
           height: 48px;
-          border: solid 2px var(--border__button);
+          border: solid 3px var(--border__button);
           color: var(--color__button-2);
         }
       }
